--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ DMS_DATABASE_PASSWORD =
 JWT_SECRET = dormitory_management_system_kevin_A1095557_tp61i60
 JWT_EXPIRES = 1h
 JWT_COOKIE_EXPIRES = 1
+
+SMTP_MAIL = a1095550manager@gmail.com
+SMTP_PASSWORD = klmpgicaxvslavmn
