--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "hbs": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.20"
+    "nodemailer": "^6.9.2",
+    "nodemon": "^2.0.20",
+    "randomstring": "^1.2.3"
   }
 }
